--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: Actividad 4
-description: Architect is a theme for GitHub Pages.
+title: Actividad 3
+description: 
 theme: jekyll-theme-architect
